--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,14 +20,14 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".SharkSplit"
             android:label="@string/app_name" >
 
            </activity>
         <activity
             android:name=".ContinueToSplit"
             android:label="@string/title_activity_continue_to_split"
-            android:parentActivityName=".MainActivity" >
+            android:parentActivityName=".SharkSplit" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -35,7 +35,7 @@
             </intent-filter>
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.traviswu.payme.MainActivity" />
+                android:value="com.traviswu.payme.SharkSplit" />
         </activity>
     </application>
 
