modified:   app/src/main/AndroidManifest.xml 	modified:   app/src/main/java/com/traviswu/payme/ContinueToSplit.java 	modified:   app/src/main/java/com/traviswu/payme/SharkSplit.java 	new file:   app/src/main/res/layout/continue_to_split.xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,13 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.traviswu.payme.SharkSplit" />
         </activity>
+        <activity
+            android:name=".ContinueToSplit"
+            android:label="Spliting Display"
+            android:parentActivityName=".SharkSplit">
+        </activity>
+
+
     </application>
 
 </manifest>
